--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<title>"Git"</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -10,6 +11,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<p><b>"My intro to Git and colab"</b></p>
 
 </body>
 
